# reclaimspace

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  ca_profile.xml  docker-compose.yml  docker-publish.sh  docker-run.sh  docker-stop.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
config/: .gitignore  settings.example.json
docs/: CONFIGURATION.md  DOCKER.md  ONBOARDING.md  RELEASE.md  UNRAID_CA.md  USAGE.md  WEB_UI.md
docs/RELEASE_NOTES/: v1.2.0.md
reclaimspace/: __init__.py  _version.py  config_store.py  media_duplicates.py  restore.py  runner.py
reclaimspace/web/: __init__.py  __main__.py  app.py  jobs.py  notifications.py  reports_view.py  scheduler.py  setup.py
reclaimspace/web/static/: app.js  common.js  config-page.js  config.html  index.html  reports-grid.js  settings.js  styles.css  wizard.js
templates/: reclaimspace.xml
tests/: test_config_store.py  test_media_duplicates.py  test_setup.py  test_version.py
unraid/: reclaimspace.xml
