[project]
name = "reclaimspace"
version = "1.0.0"
description = "Safely quarantine Plex media duplicates not managed by Radarr or Sonarr."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "romwil" }]
keywords = ["plex", "radarr", "sonarr", "media", "duplicates", "unraid"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/romwil/reclaimspace"
Repository = "https://github.com/romwil/reclaimspace"
Issues = "https://github.com/romwil/reclaimspace/issues"

[project.scripts]
media-duplicates = "reclaimspace.media_duplicates:main"

[tool.unittest]
testpaths = ["tests"]
